# Auggie

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json
frontend/public/data/: od_matrix.json  origin_counts.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Legend.jsx  Map.jsx  Tooltip.jsx
pipeline/: .gitignore  README.md  download_shapefile.sh  pyproject.toml  run.py
